--- a/article/04.md
+++ b/article/04.md
@@ -9,13 +9,13 @@
 
 「インストールが簡単だから、ちょっと設定して、少しおしゃべりしておしまいにするつもりだったから」  
 『はあ』  
-「だからChrome OSつながりでCloudReadyの作品に入れちゃったんだけど[^hello] 」  
+「だからChrome OSつながりでCloudReadyの作品に入れちゃったんだけど[^1] 」  
 『はい』  
 「もっといろいろなことが書けるかもしれない」  
 『それは面白いですね』  
 「…」  
 
-[^hello]: この作品は、かつて[終末のChrome OS](https://jamcha-aa.github.io/cloudready-VT)の一部だった。
+[^1]: この作品は、かつて[終末のChrome OS](https://jamcha-aa.github.io/cloudready-VT)の一部だった。
 
 何かに勘づいた私がChromeの履歴を開こうとする。すると途端にC202SAが慌てだした。  
 『あ、ちょ、ちょっと！だめですよ！』  
