--- a/article/05.md
+++ b/article/05.md
@@ -33,9 +33,10 @@
 「なに？」  
 『あなたがいう『かっこいい』って何ですか？』  
 
-不意の質問に私は怪訝な表情をする。  
+不意の質問に私は怪訝な表情をする。
+
 「えー、なんでそんな難しい質問するの？まさかThinkPadに染められた？」  
-『えっと、あの、そういうわけではないですけど、なにか、いつも面倒な方を選んで苦しんでいるように思えて、あ、責めてるわけじゃないんですよ、でも、その…あえてアプリのインストールをしないとか…。そうそう、Crostiniも最初は嫌がってましたよね？』  
+『えっと、あの、そういうわけではないですけど、なにか、いつも面倒な方を選んで苦しんでいるようにみえて、あ、責めてるわけじゃないんですよ、でも、その…あえてアプリのインストールをしないとか…。そうそう、Crostiniも最初は嫌がってましたよね？』  
 「うー、だってそっちのほうがかっこいいんだもん」  
 『はあ…それでその…かっこいいとはどういうことなんでしょう』
 
@@ -48,7 +49,13 @@ C202SAの返事に私はすぐ答えられなかった。「…」
 
 どうしてそんなことを言ったのだろう。何度もその言葉を思い返した。私がかっこいいと思う道を選ぶとき、いつも問いが放たれる。どうしてそんなことをするの？何の意味があるの？何の価値があるの？何を目指している？
 
-それは私を尻込みさせるための問いだった。その問いに答えるのは大変だ。だからといって、その言葉に従ってしまうと、広い道を歩いているのに、まるでもつれた糸にからまったように動けなくなってしまう。一方で、かっこいい方は、たいてい舗装されていない草むらだ。そこへ私が入って、草をがさがさと鳴らしてケガをするさまを、広い道に立つ人は笑い、あざけり、そしてときには興味しんしんにながめている。
+それは私を尻込みさせるための問いだった。その問いに答えるのは大変だ。それでも答えられないからといってその言葉に従ってしまうと、広い道を歩いているのに、まるでもつれた糸にからまったように動けなくなってしまう、ことが多い。
+
+一方で、かっこいいと思う道は、言葉のもつ意味には程遠く、たいていは舗装されていない草むらだ。そこへ私が入って、道なき道を進み、草をがさがさと鳴らしてケガをする。それを広い道に立つ人は笑い、あざけり、
+
+そしてときには興味しんしんにながめている。
+
+<br>
 
 しだいに、曇った視界がみるみる晴れていくように感じた。
 
