--- a/article/03.md
+++ b/article/03.md
@@ -27,7 +27,7 @@
 『ぼくの弱点を突けば、2年かからずに壊せます』  
 「弱点？」『はい。ぼくの弱点。それはぼくのeMMCです』
 
-C202SAは外側をラバーコーティングで守られ、キーボードに水をこぼしてもすぐに故障はしない、鉄壁の防御を誇る。それに対し、C202SAの内部に直付けされたeMMCは16GBと少なく、その構造ゆえ書き換え上限も低い。ゆえに、私が文章を死ぬほど書いてeMMCが使えなくなってしまえば、無事C202SAを壊せるというわけだ。
+C202SAは外側をラバーコーティングで守られ、キーボードに水をこぼしてもすぐに故障はしない、鉄壁の防御を誇る。それに対し、C202SAの内部に直付けされたeMMCは16GBと少なく、容量の少なさゆえ書き換え上限も低い。したがって、私が文章を死ぬほど書いてeMMCが使えなくなってしまえば、無事C202SAを壊せるというわけだ。
 
 『あなたがぼくを壊したいなら、ぜひ、壊れるくらいぼくを使ってください！』  
 「うん…壊す！君を壊してみせる！」
