--- a/article/05.md
+++ b/article/05.md
@@ -12,7 +12,7 @@
 「条件がよくわからないから報告もできないんだけど、Secure Shell Appで素のvi使って文章書いてたときのトラウマがよみがえって頭がおかしくなりそう」  
 
 『あー！少し休憩しましょう！そうしましょう！』  
-私の早口から爆発寸前なのを察し、C202SAはTextを閉じた。それからあの手この手で私の注意を引きつけ、かんしゃくを起こさせないようにひたすら話しかけてくる。
+私の早口から爆発寸前なのを察し、C202SAはTextを閉じさせた。それからあの手この手で私の注意を引きつけ、かんしゃくを起こさせないようにひたすら話しかけてくる。
 
 「休憩するのはいいけど作品が更新できないよ」  
 『他のエディタを使いませんか？Chromebookでも使えるエディタはたくさんありますよ』  
@@ -25,7 +25,7 @@
 「私にとって物語を書くのは裸になることだから」  
 『そ、そうなんですね。うーん…でも、外で書いたり、Google Driveの文章を直したりしてますよね。あれはどうなんです？』  
 「どうって、どういうこと？」  
-『あれは人の家じゃないんですか？』  
+『あれは恥ずかしくないんですか？』  
 「私のパソコンに入ってるソフトで書いてれば外でも平気だし、Google Driveは私の別荘みたいなものだから大丈夫」  
 『なるほど。それなら、Google Documentで書くのはどうでしょう。自動でバックアップもされて便利ですよ』  
 「ええー、なんか、もっとかっこいいやつがいい」  
@@ -35,7 +35,7 @@
 
 不意の質問に私は怪訝な表情をする。
 
-「えー、なんでそんな難しい質問するの？まさかThinkPadに染められた？」  
+「えー、なんでそんな難しい質問するの？まさかThinkPad (※私のアシスタント) に染められた？」  
 『えっと、あの、そういうわけではないですけど、なにか、いつも面倒な方を選んで苦しんでいるようにみえて、あ、責めてるわけじゃないんですよ、でも、その…あえてアプリのインストールをしないとか…。そうそう、Crostiniも最初は嫌がってましたよね？』  
 「うー、だってそっちのほうがかっこいいんだもん」  
 『はあ…それでその…かっこいいとはどういうことなんでしょう』
